<resources>
    <!--Object Titles-->
    <string name="app_name">Doctor Face</string>
    <string name="company_brand">Version 1.0.0 \n Powered By Bipital.com</string>
    <string name="login">Login</string>
    <string name="exit">Exit</string>
    <string name="signup">Signup</string>
    <string name="newPatient">New Patient Info</string>
    <string name="displayPatients">Display Patients List</string>
    <string name="backUpRestore">Backup And Restore</string>
    <string name="drname">Fullname</string>
    <string name="nationalCode">National Code</string>
    <string name="username">Username(National Code)</string>
    <string name="password">Password</string>
    <string name="Confirmpassword">Confirm Password</string>
    <string name="goToSignup">Dont have an account? Click Here</string>
    <string name="goToLogin">Already have an account? Click Here</string>
    <string name="lostPassword">I Forgot My Password</string>
    <string name="menuRegister">Register New Patient</string>
    <string name="menuDisplay">Display Patients Information</string>
    <string name="menuEdit">Edit User Information</string>
    <string name="menuBackUp">BackUp And Restore</string>
    <string name="camera">Camera</string>
    <string name="showImage">Show</string>
    <string name="remove">Remove</string>
    <string name="update">Update Info</string>
    <string name="export">Export Data</string>
    <string name="newPassword">New Password</string>
    <!--Messages-->
    <string name="tapToClose">Press Back Again To Exit!</string>
    <string name="noNetwork">You are not connected to network</string>
    <string name="askToUpdate">Are you sure to update your information?</string>
    <string name="askToExport">Are you sure to export patients information?</string>
    <string name="askToSave">Are you sure to save patient information?</string>
    <string name="askToLogout">Do you really want to log out?</string>
    <string name="passwordsnotmatch">Passwords are not match.Enter password correctly and try again</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noImagetoShow">There\'s no image to show</string>
    <string name="givePermissions">Please give permissions to continue</string>
    <string name="enterAllFields">Enter All Fields And Try Again!</string>
    <string name="enterArgfields">Enter All Face Arg Fields And Try Again!</string>
    <string name="successMessage">Operation Completed Successfully!</string>
    <string name="addMessage">Face args added to list</string>
    <string name="failureMessage">Operation Failed By Error!</string>
    <string name="noResponse">No Response received from server</string>
    <string name="inactiveAccount">Your account is not activated yet.please contact administrator</string>
    <string name="loggedInAccount">This account is currently in use on another device.you connot login with these credentials</string>
    <string name="somethingIsWrong">Oops! something went wrong.please try again!</string>
    <string name="editNote">Note:National Code is used as your username to login to app</string>
    <string name="exportNote">You can always make a copy of your patient\'s data as a CSV file and use it in your pc or phone \n
        Default Export Path: \n PhoneStorage/jamiExport/Patients.csv
    </string>
    <string name="exportNoData">You have no patients data to export!</string>
    <string name="passwordnotMatch">Passwords do not match</string>
    <string name="noCameraAvailable">No Camera Detected!</string>
    <!--Hints-->
    <string name="patientInfo">Patient Info</string>
    <string name="faceArgs">Patient\'s Face Args</string>
    <string name="faceImage">Patient\'s Face Image</string>
    <string name="patientFullName">Patient FullName</string>
    <string name="patientRefDate">Reference Date</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="searchPatients">Search Patients</string>
    <string name="upperIncisal">Upper Incisal</string>
    <string name="lowerIncisal">Lower Incisal</string>
    <string name="uppergingival">Upper gingival</string>
    <string name="lowergingival">Lower gingival</string>
    <string name="earXAngle">Ear X Angle</string>
    <string name="earYAngle">Ear Y Angle</string>
    <string name="eyeXAngle">Eye X Angle</string>
    <string name="eyeYAngle">Eye Y Angle</string>
    <string name="eyebrowXAngle">Eyebrow X Angle</string>
    <string name="eyebrowYAngle">Eyebrow Y Angle</string>
    <string name="ramusBoneXAngle">Ramus Bone X Angle</string>
    <string name="ramusBoneYAngle">Ramus Bone Y Angle</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="StoreAll">Store Patient Data</string>
    <string name="AddFaceArg">Add Face Arg</string>
    <string name="imgBefore">Before</string>
    <string name="imgAfter">After</string>
    <string name="imgMask">Mask</string>

    <!--Titles-->
    <string name="titleRegister">Register New Patient</string>
    <string name="titleDisplay">Patients List</string>
    <string name="titleEdit">Edit User</string>
    <string name="titleExport">Export Data</string>
    <string name="logout">Log out</string>
</resources>
