<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation">
    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="12dip"
            android:background="@drawable/text_back"
            android:hint="@string/drname"
            android:maxLength="30"
            android:inputType="text"/>
        <EditText
            android:id="@+id/edit_nationalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="12dip"
            android:background="@drawable/text_back"
            android:hint="@string/nationalCode"
            android:maxLength="30"
            android:inputType="text"/>
        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="12dip"
            android:background="@drawable/text_back"
            android:hint="@string/newPassword"
            android:maxLength="20"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/edit_passwordconfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="@dimen/big_margin"
            android:background="@drawable/text_back"
            android:hint="@string/Confirmpassword"
            android:maxLength="20"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/edit_btnChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/update"
            android:textColor="@color/white"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>