<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signup_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="@dimen/big_padding">
        <ImageView
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/img_height"
            android:src="@drawable/ic_signup"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/signup_txtFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textViewMargin"
            android:background="@drawable/text_back"
            android:hint="@string/drname"
            android:textAlignment="center"
            android:textCursorDrawable="@drawable/text_cursor"
            android:maxLength="30"
            android:textSize="@dimen/text_size" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/signup_txtNationalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_Margin"
            android:background="@drawable/text_back"
            android:textCursorDrawable="@drawable/text_cursor"
            android:hint="@string/nationalCode"
            android:inputType="number"
            android:maxLength="10"
            android:textSize="@dimen/text_size"
            android:textAlignment="center"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/signup_txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_Margin"
            android:background="@drawable/text_back"
            android:textCursorDrawable="@drawable/text_cursor"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="50"
            android:textSize="@dimen/text_size"
            android:textAlignment="center"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/signup_txtConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_Margin"
            android:layout_marginBottom="@dimen/big_margin"
            android:background="@drawable/text_back"
            android:textCursorDrawable="@drawable/text_cursor"
            android:hint="@string/Confirmpassword"
            android:inputType="textPassword"
            android:maxLength="50"
            android:textSize="@dimen/text_size"
            android:textAlignment="center"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:background="@drawable/round_button" />
        <!--<include layout="@layout/progress_button" />-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/goToLogin"
            android:layout_marginTop="@dimen/global_margin"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>