<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/reg_face_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/global_padding"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="12dip"
            android:hint="@string/upperIncisal"
            app:hintTextAppearance="@style/HintText"
            app:hintAnimationEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/reg_upper_inc"
                android:maxLength="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="12dip"
            android:hint="@string/lowerIncisal"
            app:hintTextAppearance="@style/HintText"
            app:hintAnimationEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/reg_lower_inc"
                android:maxLength="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="12dip"
            android:hint="@string/uppergingival"
            app:hintTextAppearance="@style/HintText"
            app:hintAnimationEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_upper_ging"
                android:inputType="numberDecimal"
                android:maxLength="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="12dip"
            android:hint="@string/lowergingival"
            app:hintTextAppearance="@style/HintText"
            app:hintAnimationEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_lower_ging"
                android:maxLength="5"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/reg_chinmode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="12dip"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="12dip"
            android:hint="@string/earXAngle"
            app:hintTextAppearance="@style/HintText"
            app:hintAnimationEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:id="@+id/reg_ear_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="12dip"
            android:hint="@string/earYAngle"
            app:hintTextAppearance="@style/HintText"
            app:hintAnimationEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:id="@+id/reg_ear_y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="5"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="12dip"
            android:hint="@string/eyeXAngle"
            app:hintTextAppearance="@style/HintText"
            app:hintAnimationEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:id="@+id/reg_eye_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="12dip"
            android:hint="@string/eyeYAngle"
            app:hintTextAppearance="@style/HintText"
            app:hintAnimationEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:id="@+id/reg_eye_y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="12dip"
            android:hint="@string/eyebrowXAngle"
            app:hintTextAppearance="@style/HintText"
            app:hintAnimationEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:id="@+id/reg_eyebrow_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="12dip"
            android:hint="@string/eyebrowYAngle"
            app:hintTextAppearance="@style/HintText"
            app:hintAnimationEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:id="@+id/reg_eyebrow_y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="12dip"
            android:hint="@string/ramusBoneXAngle"
            app:hintTextAppearance="@style/HintText"
            app:hintAnimationEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:id="@+id/reg_ramus_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:layout_marginBottom="12dip"
            android:hint="@string/ramusBoneYAngle"
            app:hintTextAppearance="@style/HintText"
            app:hintAnimationEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:id="@+id/reg_ramus_y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>