<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/reg_personal_info"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dip"
        android:layout_marginRight="32dip"
        android:layout_marginBottom="12dip"
        android:hint="@string/patientFullName"
        app:hintTextAppearance="@style/HintText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintAnimationEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_pname"
            android:inputType="text"
            android:maxLength="30"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dip"
        android:layout_marginRight="32dip"
        android:layout_marginBottom="12dip"
        android:hint="@string/nationalCode"
        app:hintTextAppearance="@style/HintText"
        app:hintAnimationEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_ncode"
            android:maxLength="10"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dip"
        android:layout_marginRight="32dip"
        android:layout_marginBottom="12dip"
        android:hint="@string/phoneNumber"
        app:hintTextAppearance="@style/HintText"
        app:hintAnimationEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="11"
            android:id="@+id/reg_phone" />
    </com.google.android.material.textfield.TextInputLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dip"
        android:layout_marginRight="32dip"
        android:layout_marginBottom="12dip"
        android:id="@+id/reg_rdate"
        android:text="@string/patientRefDate"
        android:textColor="@color/grey_80"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

</LinearLayout>