<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="@dimen/big_padding">
    <ImageView
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:src="@mipmap/logotooth"
        android:layout_gravity="center"/>
     <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/login_txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textViewMargin"
            android:background="@drawable/text_back"
            android:hint="@string/username"
            android:textAlignment="center"
            android:textCursorDrawable="@drawable/text_cursor"
            android:maxLength="10"
            android:inputType="number"
            android:textSize="@dimen/text_size" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/login_txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_margin"
            android:layout_marginBottom="@dimen/big_margin"
            android:background="@drawable/text_back"
            android:hint="@string/username"
            android:textAlignment="center"
            android:textCursorDrawable="@drawable/text_cursor"
            android:inputType="textPassword"
            android:maxLength="30"
            android:textSize="@dimen/text_size" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:background="@drawable/round_button" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/goToSignup"
            android:layout_marginTop="@dimen/global_margin"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btnForget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/lostPassword"
            android:layout_marginTop="@dimen/global_margin"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>