<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    android:gravity="center"
    android:id="@+id/reg_face_img"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/imgBefore"
            android:gravity="center"
            android:textColor="@color/black"
            style="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/imgMask"
            android:gravity="center"
            android:textColor="@color/black"
            style="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/imgAfter"
            android:gravity="center"
            android:textColor="@color/black"
            style="@style/TextAppearance.AppCompat.Medium"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/reg_img_before"
            android:layout_width="@dimen/thumb_width"
            android:layout_height="@dimen/thumb_height"
            android:scaleType="fitXY"
            android:src="@drawable/ic_image"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/reg_img_mask"
            android:layout_width="@dimen/thumb_width"
            android:layout_height="@dimen/thumb_height"
            android:layout_weight="1"
            android:src="@drawable/ic_image"
            android:scaleType="fitXY"/>
        <ImageView
            android:id="@+id/reg_img_after"
            android:layout_width="@dimen/thumb_width"
            android:layout_height="@dimen/thumb_height"
            android:layout_weight="1"
            android:src="@drawable/ic_image"
            android:scaleType="fitXY"/>
    </LinearLayout>
</LinearLayout>